# llm-proxy

./: .gitignore  CLAUDE.md  Dockerfile  README.ko.md  README.md  config.example.yaml  config.local-test.yaml  model_snapshot.json  pyproject.toml  routing.example.yaml
scripts/: mock_llm_panel.html  mock_llm_server.py  test_request.py
src/llm_proxy/: cli.py  config.py  database.py  discovery.py  models.py  router.py  server.py
src/llm_proxy/adapters/: anthropic.py
src/llm_proxy/dashboard/static/: app.js  index.html  style.css
tests/: TESTS.ko.md  conftest.py  mock_upstream.py  test_anthropic_adapter.py  test_anthropic_e2e.py  test_config.py  test_context_routing.py  test_e2e.py  test_failover.py  test_router.py  test_server.py
